--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Nuri</h1>
-    <h2>Trainee bei neuefische</h2>
+    <h2>nURI</h2>
+    <h3>musab</h3>
   </body>
 </html>
