--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <script
       defer
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -25,10 +26,8 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
-    <h1>Nuri</h1>
-    <h2>nURI</h2>
-    <h3>musab</h3>
-    <p>bla</p>
+  <body style="font-family: 'Comic Sans MS', sans-serif">
+    <h1 class="p-3 bg-primary" style="background-color:#28a745; color: black;">Nuri</h1>
+    <h2 style="font-family: 'Shadows Into Light', cursive;">nURI</h2>
   </body>
 </html>
