--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   </head>
   <body style="font-family: 'Comic Sans MS', sans-serif">
     <h1 class="p-3 bg-primary" style="background-color:#28a745; color: black;">Nuri</h1>
-    <h2 style="font-family: 'Shadows Into Light', cursive;">nURI</h2>
+    <h2 style="font-family: 'Shadows Into Light', cursive;">n</h2>
   </body>
 </html>
