--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Nuri</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <script
@@ -26,8 +26,100 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body style="font-family: 'Comic Sans MS', sans-serif">
-    <h1 class="p-3 bg-primary" style="background-color:#28a745; color: black;">Nuri</h1>
-    <h2 style="font-family: 'Shadows Into Light', cursive;">nURI</h2>
+  <body class="container">
+    <header class="row my-3">
+      <h1 class="h2 col-12 col-md-6 text-center text-md-left">Noor Ahmed Barekzai</h1>
+      <nav class="col-12 col-md-6 text-center text-md-right">
+        <a href="#contact">Kontakt</a>
+        <a href="#bio">Biografie</a>
+      </nav>
+    </header>
+    <main>
+      <section class="row">
+        <div class="col-12 col-md-4 p-1 border-top border-left border-dark">
+          <img class="img-fluid shadow rounded" src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ" alt="Profilfoto">
+          <p class="mt-3 text-justify text-secondary">Mein Name ist Nuri und ich besuche das Bootcamp für Web-Developer bei <a href="https://www.neuefische.de"><i>neuefische</i></a>.</p>
+        </div>
+        <div class="col-12 col-md-8 text-center pr-1 border-right border-dark">
+          <h2 class="p3 bg-light h4 rounded text-secondary mb-3 border border-info"><i>Technische Skills</i></h2>
+          <ul class="list-inline">
+            <li class="list-inline-item bg-info text-black rounded mr-2 mb-2 p-2">Bootcamp</li>
+            <li class="list-inline-item bg-info text-black rounded mr-2 mb-2 p-2">Text</li>
+            <li class="list-inline-item bg-info text-black rounded mr-2 mb-2 p-2">neuefische</li>
+            <li class="list-inline-item bg-info text-black rounded mr-2 mb-2 p-2">Bootcamp</li>
+            <li class="list-inline-item bg-info text-black rounded mr-2 mb-2 p-2">Text</li>
+            <li class="list-inline-item bg-info text-black rounded mr-2 mb-2 p-2">neuefische</li>
+          </ul>
+          <h2 class="p2 bg-light h5 rounded text-secondary mb-3 border border-success"><i>Soft Skills</i></h2>
+          <ul class="list-inline">
+            <li class="list-inline-item bg-success text-white rounded mr-2 mb-2 p-2">Text</li>
+            <li class="list-inline-item bg-success text-white rounded mr-2 mb-2 p-2">Bootcamp</li>
+            <li class="list-inline-item bg-success text-white rounded mr-2 mb-2 p-2">neuefische</li>
+            <li class="list-inline-item bg-success text-white rounded mr-2 mb-2 p-2">Bootcamp</li>
+            <li class="list-inline-item bg-success text-white rounded mr-2 mb-2 p-2">Text</li>
+          </ul>
+        </div>
+      </section>
+      <article id="contact" class="row mb-3 border-bottom border-dark">
+        <div class="col-12 col-md-6 h5-md">
+          <span class="mr-2"><i>Meine Telefonnummer:</i></span>
+          <a href="tel: 0176 1234567"><i>0176-12 34 53 67</i></a>
+        </div>
+        <div class="col-12 col-md-6 h5-md">
+          <span class="mr-2"><i>Meine E-mail:</i></span>
+          <a href="mailto: nuri_nb@hotmail.de"><i>nuri_nb@hotmail.de</i></a>
+        </div>
+      </article>
+      <section class="row align-items-end border-bottom border-dark mb-3">
+        <article class="col-12 col-md-4">
+        	<a class="d-block p-3 text-center" href="https://www.github.com" target="_blank">
+        	 <img class="img-fluid width-5 hight-15" src="/images/github-2.svg" alt="GitHub logo">
+        	 <p class="mt-2">GitHub</p>
+        	</a>
+        </article>
+        <article class="col-12 col-md-4">
+          <a class="d-block p-3 text-center" href="https://www.gitlab.com" target="_blank">
+          	<img class="img-fluid" src="/images/gitlab.svg" target="_blank" alt="GitLab logo">
+          	<p class="mt-2">GitLab</p>
+          </a>
+        </article>
+        <articel class="col-12 col-md-4">
+          <a class="d-block p-3 text-center" href="https://www.codepen.com" target="_blank">
+            <img class="img-fluid" src="/images/codepen.svg" target="_blank" alt="CodePen logo">
+            <p class="mt-2">CodePen</p>
+          </a>
+        </article>
+      </section>
+      <section class="row">
+        <article class="col-12 col-md-6 border-bottom border-left border-dark">
+          <h2 class="mb-1">Über mich</h2>
+          <p class="text-justify text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis exercitationem, enim aut nihil unde sint dolores aliquid fuga numquam voluptatibus, quisquam eveniet magnam sunt error maiores vitae quibusdam beatae qui.</p>
+          <p class="text-justify text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus obcaecati a quaerat corporis consectetur sequi suscipit asperiores, id voluptatibus exercitationem perferendis. Architecto rem excepturi, ut animi voluptatem pariatur ipsum. Debitis.</p>
+        </article>
+        <article class="col-12 col-md-6 border-bottom border-right border-dark">
+          <h2 id="bio">Bio</h2>
+          <table class="table">
+            <tbody>
+              <tr>
+                <td>2019</td>
+                <td>Bootcamp</td>
+              </tr>
+              <tr>
+                  <td>2019</td>
+                  <td>Bootcamp</td>
+                </tr>
+                <tr>
+                    <td>2019</td>
+                    <td>Bootcamp</td>
+                  </tr>
+                  <tr>
+                      <td>2019</td>
+                      <td>Bootcamp</td>
+                    </tr>
+            </tbody>
+          </table>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
